--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,7 +74,7 @@
     "entries": {
       "js": "main**.js",
       "css": "main**.styl",
-      "font": "**.{eot,otf,svg,ttf,woff,woff2}"
+      "font": "**/*.{eot,otf,svg,ttf,woff,woff2}"
     }
   }
 }
