--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.2.0",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "owl.carousel": "^2.2.0"
   },
   "devDependencies": {
+    "animate.css": "^3.5.2",
     "autoprefixer": "~6.3.1",
     "browser-sync": "~2.13.0",
     "browserify": "~13.0.1",
@@ -40,6 +42,7 @@
     "js-yaml": "~3.5.2",
     "lodash": "~4.0.0",
     "minimist": "~1.2.0",
+    "owl.carousel": "^2.2.0",
     "rimraf": "~2.5.0",
     "vinyl-buffer": "~1.0.0",
     "vinyl-source-stream": "~1.1.0",
@@ -48,6 +51,20 @@
   },
   "scripts": {
     "clean-deps": "rimraf node_modules"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browser": {
+    "owl.carousel": "./node_modules/owl.carousel/dist/owl.carousel.js"
+  },
+  "browserify-shim": {
+    "owl.carousel": {
+      "exports": null,
+      "depends": "jquery:$"
+    }
   },
   "engines": {
     "node": ">=0.12.0"
